INPUTDATA = ts_1d_5years ts_ym_5years ts_mm_5years ts_mm_1year ts_mm_1991 ts_6h_1mon ts_1d_1year ts_mm_5years_m ts_mm_1year_m ts_mm_1991_m ts_6h_1mon_m ts_1d_1year_m \
            tp_mm_5years tp_mm_5years_m \
            hl_l19.grb ap_l47.nc gh_L191.nc t31_dv.grb t21_geosp_tsurf.grb t21_geosp_tsurf_sea.grb bathy4.grb pl_data pl_data.grb detrend_data \
            grib_testfile01.grb grib_testfile02.grb grib_testfile03.grb netcdf_testfile01.nc netcdf_testfile02.nc netcdf_testfile03.nc testfile01c.nc \
            datar.nc datac.nc datau.nc datag.nc arith1.srv expr1.srv arithmask.srv psl_DJF_anom.grb tsurf_spain.grb spain.grid \
            topo_eu5.grb vars_data.grb math_data tsurf_1d_1year tsurf_runpctl_1d_1year mpiom_tho_sao.srv topo5.srv \
            temp_hp32_nest.nc temp_hp16_nest.nc temp_global_2.nc

FILE         = file_F32_srv_ref
GRIB         = grib_testfile01_sinfo_ref grib_testfile01_info_ref grib_testfile02_sinfo_ref grib_testfile02_info_ref grib_testfile03_sinfo_ref grib_testfile03_info_ref
NETCDF       = netcdf_testfile01_sinfon_ref netcdf_testfile01_infon_ref netcdf_testfile02_sinfon_ref netcdf_testfile02_infon_ref netcdf_testfile03_sinfon_ref netcdf_testfile03_infon_ref
ADISIT       = adisit_ref adipot_ref
COMP         = comp_eqc_ref comp_gec_ref comp_gtc_ref comp_lec_ref comp_ltc_ref comp_nec_ref comptest.srv
EOF          = eval_ref eof_ref pcoeff00000
ECA          = eca_hwfi_ref etccdi_wsdi_ref
YDRUNSTAT    = ydrunmin_ref ydrunmax_ref ydrunsum_ref ydrunavg_ref ydrunmean_ref ydrunstd_ref ydrunstd1_ref ydrunvar_ref ydrunvar1_ref ydrunpctl_ref
YDAYSTAT     = ydaymin_ref ydaymax_ref ydaysum_ref ydayavg_ref ydaymean_ref ydaystd_ref ydaystd1_ref ydayvar_ref ydayvar1_ref ydayrange_ref
YDAYSTATM    = ydayminm_ref ydaymaxm_ref ydaysumm_ref ydayavgm_ref ydaymeanm_ref ydaystdm_ref ydaystd1m_ref ydayvarm_ref ydayvar1m_ref ydayrangem_ref
YMONSTAT     = ymonmin_ref ymonmax_ref ymonsum_ref ymonavg_ref ymonmean_ref ymonstd_ref ymonstd1_ref ymonvar_ref ymonvar1_ref ymonrange_ref
YMONSTATM    = ymonminm_ref ymonmaxm_ref ymonsumm_ref ymonavgm_ref ymonmeanm_ref ymonstdm_ref ymonstd1m_ref ymonvarm_ref ymonvar1m_ref ymonrangem_ref
YSEASSTAT    = yseasmin_ref yseasmax_ref yseassum_ref yseasavg_ref yseasmean_ref yseasstd_ref yseasstd1_ref yseasvar_ref yseasvar1_ref yseasrange_ref
YSEASSTATM   = yseasminm_ref yseasmaxm_ref yseassumm_ref yseasavgm_ref yseasmeanm_ref yseasstdm_ref yseasstd1m_ref yseasvarm_ref yseasvar1m_ref yseasrangem_ref
SEASSTAT     = seasmin_ref seasmax_ref seassum_ref seasavg_ref seasmean_ref seasstd_ref seasstd1_ref seasvar_ref seasvar1_ref seasrange_ref
SEASSTATM    = seasminm_ref seasmaxm_ref seassumm_ref seasavgm_ref seasmeanm_ref seasstdm_ref seasstd1m_ref seasvarm_ref seasvar1m_ref seasrangem_ref
TIMPCTL      = seaspctl50_ref timpctl50_ref yearpctl50_ref monpctl50_ref daypctl50_ref yseaspctl50_ref ymonpctl50_ref ydaypctl50_ref
TIMSELPCTL   = timsel12pctl50_ref timsel60pctl50_ref
RUNSTAT      = runmin_ref runmax_ref runsum_ref runavg_ref runmean_ref runstd_ref runstd1_ref runvar_ref runvar1_ref runrange_ref
RUNSTATM     = runminm_ref runmaxm_ref runsumm_ref runavgm_ref runmeanm_ref runstdm_ref runstd1m_ref runvarm_ref runvar1m_ref runrangem_ref
RUNPCTL      = runpctl1_ref runpctl20_ref runpctl25_ref runpctl33_ref runpctl50_ref runpctl66_ref runpctl75_ref runpctl80_ref runpctl99_ref runpctl100_ref
YEARMONSTAT  = yearmonmean_ref yearmonavg_ref
TIMSTAT2     = timcor_ref timcovar_ref
TIMSTAT      = timmin_ref timmax_ref timsum_ref timavg_ref timmean_ref timstd_ref timstd1_ref timvar_ref timvar1_ref timrange_ref
YEARSTAT     = yearmin_ref yearmax_ref yearsum_ref yearavg_ref yearmean_ref yearstd_ref yearstd1_ref yearvar_ref yearvar1_ref yearrange_ref
MONSTAT      = monmin_ref monmax_ref monsum_ref monavg_ref monmean_ref monstd_ref monstd1_ref monvar_ref monvar1_ref monrange_ref
DAYSTAT      = daymin_ref daymax_ref daysum_ref dayavg_ref daymean_ref daystd_ref daystd1_ref dayvar_ref dayvar1_ref dayrange_ref
TIMSTATM     = timminm_ref timmaxm_ref timsumm_ref timavgm_ref timmeanm_ref timstdm_ref timstd1m_ref timvarm_ref timvar1m_ref timrangem_ref
YEARSTATM    = yearminm_ref yearmaxm_ref yearsumm_ref yearavgm_ref yearmeanm_ref yearstdm_ref yearstd1m_ref yearvarm_ref yearvar1m_ref yearrangem_ref
MONSTATM     = monminm_ref monmaxm_ref monsumm_ref monavgm_ref monmeanm_ref monstdm_ref monstd1m_ref monvarm_ref monvar1m_ref monrangem_ref
DAYSTATM     = dayminm_ref daymaxm_ref daysumm_ref dayavgm_ref daymeanm_ref daystdm_ref daystd1m_ref dayvarm_ref dayvar1m_ref dayrangem_ref
VERTSTAT     = vertmin_ref vertmax_ref vertsum_ref vertavg_ref vertmean_ref vertstd_ref vertstd1_ref vertvar_ref vertvar1_ref vertint_ref vertrange_ref vertcum_ref
VARSSTAT     = varsmin_ref varsmax_ref varssum_ref varsavg_ref varsmean_ref varsstd_ref varsstd1_ref varsvar_ref varsvar1_ref varsrange_ref
FLDSTAT2     = fldcor_ref fldcovar_ref
FLDSTAT      = fldmin_ref fldmax_ref fldsum_ref fldavg_ref fldmean_ref fldstd_ref fldstd1_ref fldvar_ref fldvar1_ref fldrange_ref fldkurt_ref fldskew_ref fldmedian_ref
FLDPSTAT     = fldpctl1_ref fldpctl20_ref fldpctl25_ref fldpctl33_ref fldpctl50_ref fldpctl66_ref fldpctl75_ref fldpctl80_ref fldpctl99_ref fldpctl100_ref
MERSTAT      = mermin_ref mermax_ref mersum_ref meravg_ref mermean_ref merstd_ref merstd1_ref mervar_ref mervar1_ref merrange_ref merskew_ref merkurt_ref mermedian_ref
ZONSTAT      = zonmin_ref zonmax_ref zonsum_ref zonavg_ref zonmean_ref zonstd_ref zonstd1_ref zonvar_ref zonvar1_ref zonrange_ref zonskew_ref zonkurt_ref zonmedian_ref
ENSSTAT      = ensmin_ref ensmax_ref enssum_ref ensavg_ref ensmean_ref ensstd_ref ensstd1_ref ensvar_ref ensvar1_ref ensrange_ref ensskew_ref enskurt_ref ensmedian_ref
ENSSTATM     = ensminm_ref ensmaxm_ref enssumm_ref ensavgm_ref ensmeanm_ref ensstdm_ref ensstd1m_ref ensvarm_ref ensvar1m_ref ensrangem_ref ensskewm_ref enskurtm_ref ensmedianm_ref
ENSPCTL      = enspctl1_ref enspctl20_ref enspctl25_ref enspctl33_ref enspctl50_ref enspctl66_ref enspctl75_ref enspctl80_ref enspctl99_ref enspctl100_ref
SPECTRAL     = sp2gp_ref sp2gpl_ref gp2sp_ref gp2spl_ref
WIND         = dv2ps_ref dv2uv_ref dv2uvl_ref uv2dv_ref uv2dvl_ref
INTTIME      = inttime_ref intyear1992_ref
VERTINT      = intlevel_ref intlevel_1_ref intlevel_2_ref intlevel3d_1_ref intlevel3d_2_ref ml2plx_ref ap2pl_ref gh2hl_ref gh2hlx_ref vert3D_c1.srv vert3D_c2.srv
REMAPHEALPIX = temp_remapcon_global_2_to_hp16_nest_ref temp_remapcon_hp16_nest_to_hp16_nest_ref temp_remapcon_hp32_nest_to_global_5_ref \
               temp_remapdis_global_2_to_hp16_nest_ref temp_remapdis_hp16_nest_to_hp16_nest_ref temp_remapdis_hp32_nest_to_global_5_ref \
               temp_remapnn_global_2_to_hp16_nest_ref temp_remapnn_hp16_nest_to_hp16_nest_ref temp_remapnn_hp32_nest_to_global_5_ref
REMAPGRID    = temp_remapbic_global_2_to_global_5_ref  temp_remapcon2_global_2_to_global_5_ref  temp_remapdis_global_2_to_global_5_ref  temp_remapnn_global_2_to_global_5_ref \
               temp_remapbil_global_2_to_global_5_ref  temp_remapscon_global_2_to_global_5_ref  temp_remaplaf_global_2_to_global_5_ref  temp_remapcon_global_2_to_global_5_ref \
               temp_remapbic_global_5_to_global_2_ref  temp_remapcon2_global_5_to_global_2_ref  temp_remapdis_global_5_to_global_2_ref  temp_remapnn_global_5_to_global_2_ref \
               temp_remapbil_global_5_to_global_2_ref  temp_remapscon_global_5_to_global_2_ref  temp_remaplaf_global_5_to_global_2_ref  temp_remapcon_global_5_to_global_2_ref \
               temp_remapbic_global_5_to_global_5_ref  temp_remapcon2_global_5_to_global_5_ref  temp_remapdis_global_5_to_global_5_ref  temp_remapnn_global_5_to_global_5_ref \
               temp_remapbil_global_5_to_global_5_ref  temp_remapcon_global_5_to_global_5_ref   temp_remaplaf_global_5_to_global_5_ref  temp_remapscon_global_5_to_global_5_ref
REMAPSTAT    = temp_remapmin_global_2_to_global_5_ref  temp_remapmax_global_2_to_global_5_ref   temp_remapsum_global_2_to_global_5_ref  temp_remapavg_global_2_to_global_5_ref \
               temp_remapmean_global_2_to_global_5_ref temp_remapstd_global_2_to_global_5_ref   temp_remapstd1_global_2_to_global_5_ref temp_remapvar_global_2_to_global_5_ref \
               temp_remapvar1_global_2_to_global_5_ref temp_remaprange_global_2_to_global_5_ref temp_remapskew_global_2_to_global_5_ref temp_remapkurt_global_2_to_global_5_ref \
               temp_remapmedian_global_2_to_global_5_ref \
               temp_remapmin_global_5_to_global_5_ref  temp_remapmax_global_5_to_global_5_ref   temp_remapsum_global_5_to_global_5_ref  temp_remapavg_global_5_to_global_5_ref \
               temp_remapmean_global_5_to_global_5_ref temp_remapstd_global_5_to_global_5_ref   temp_remapstd1_global_5_to_global_5_ref temp_remapvar_global_5_to_global_5_ref \
               temp_remapvar1_global_5_to_global_5_ref temp_remaprange_global_5_to_global_5_ref temp_remapskew_global_5_to_global_5_ref temp_remapkurt_global_5_to_global_5_ref \
               temp_remapmedian_global_5_to_global_5_ref \
               temp_remapmin_global_5_to_global_2_ref  temp_remapmax_global_5_to_global_2_ref   temp_remapsum_global_5_to_global_2_ref  temp_remapavg_global_5_to_global_2_ref \
               temp_remapmean_global_5_to_global_2_ref temp_remapstd_global_5_to_global_2_ref   temp_remapstd1_global_5_to_global_2_ref temp_remapvar_global_5_to_global_2_ref \
               temp_remapvar1_global_5_to_global_2_ref temp_remaprange_global_5_to_global_2_ref temp_remapskew_global_5_to_global_2_ref temp_remapkurt_global_5_to_global_2_ref \
               temp_remapmedian_global_5_to_global_2_ref
REMAP        = n16_bic_ref n16_bil_ref n16_scon_ref n16_con2_ref n16_con_ref n16_laf_ref n16_nn_ref n16_dis_ref \
               n32_bic_ref n32_bil_ref n32_scon_ref n32_con2_ref n32_con_ref n32_laf_ref n32_nn_ref n32_dis_ref
REMAP2       = tsurf_spain_bic_def_ref   tsurf_spain_bic_off_ref   tsurf_spain_bic_on_ref  \
               tsurf_spain_bil_def_ref   tsurf_spain_bil_off_ref   tsurf_spain_bil_on_ref  \
               tsurf_spain_dis_def_ref   tsurf_spain_dis_off_ref   tsurf_spain_dis_on_ref  \
               tsurf_spain_nn_def_ref    tsurf_spain_nn_off_ref    tsurf_spain_nn_on_ref   \
               tsurf_spain_laf_def_ref   tsurf_spain_laf_off_ref   tsurf_spain_laf_on_ref  \
               tsurf_spain_con_def_ref   tsurf_spain_con_off_ref   tsurf_spain_con_on_ref  \
               tsurf_spain_scon_def_ref  tsurf_spain_scon_off_ref  tsurf_spain_scon_on_ref \
               tsurf_spain_con2_def_ref  tsurf_spain_con2_off_ref  tsurf_spain_con2_on_ref
REMAP3       = topo_eu5_bic_def_ref   topo_eu5_bic_off_ref   topo_eu5_bic_on_ref  \
               topo_eu5_bil_def_ref   topo_eu5_bil_off_ref   topo_eu5_bil_on_ref  \
               topo_eu5_dis_def_ref   topo_eu5_dis_off_ref   topo_eu5_dis_on_ref  \
               topo_eu5_nn_def_ref    topo_eu5_nn_off_ref    topo_eu5_nn_on_ref   \
               topo_eu5_laf_def_ref   topo_eu5_laf_off_ref   topo_eu5_laf_on_ref  \
               topo_eu5_con_def_ref   topo_eu5_con_off_ref   topo_eu5_con_on_ref  \
               topo_eu5_scon_def_ref  topo_eu5_scon_off_ref  topo_eu5_scon_on_ref \
               topo_eu5_con2_def_ref  topo_eu5_con2_off_ref  topo_eu5_con2_on_ref
REMAP4       = remapbil_reg1_rotated_ref remapbic_reg1_rotated_ref remapnn_reg1_rotated_ref remapcon_reg1_rotated_ref \
               remapbil_reg2_rotated_ref remapbic_reg2_rotated_ref remapnn_reg2_rotated_ref remapcon_reg2_rotated_ref
SELECT       = select1_ref select2_ref select3_ref select4_ref select5_ref
DETREND      = detrend_ref
EXPR         = expr1_ref aexpr1_ref expr2_ref aexpr2_ref expr3_ref aexpr3_ref
THREAD       = thread1_ref tsformat1_ref
GRADSDES     = pl_data.ctl pl_data.gmp
ARITH        = arithadd_ref arithsub_ref arithmul_ref arithdiv_ref arith2.srv arith2mean.srv arith2add_ref arith2sub_ref arith2mul_ref arith2div_ref
DAYARITH     = dayadd_ref daysub_ref daymul_ref daydiv_ref
MONARITH     = monadd_ref monsub_ref monmul_ref mondiv_ref
YEARARITH    = yearadd_ref yearsub_ref yearmul_ref yeardiv_ref
YDAYARITH    = ydayadd_ref ydaysub_ref ydaymul_ref ydaydiv_ref
YMONARITH    = ymonadd_ref ymonsub_ref ymonmul_ref ymondiv_ref
MAPREDUCE    = r18x9_grid icon_cell_grid griddes.r18x9 griddes.icon_cell
MERGETIME    = mergetime_ref mergetime_y1 mergetime_y2 mergetime_y12
REMAPETA     = remapeta1.nc remapeta2.nc remapeta_ref VCT.L62
SMOOTH       = smooth1_ref smooth2_ref smooth3_ref
SETMISS      = setmisstoc_ref setmisstonn_ref setmisstodis_ref
FILTER       = lowpass_ref highpass_ref bandpass_ref
ISOSURFACE   = isosurface_ref bottomvalue_ref topvalue_ref
MASKREGION   = maskregion_r0_ref maskregion_r1_ref maskregion_r2_ref
MASKLONLATBOX = masklonlatbox_r0_ref masklonlatbox_r1_ref masklonlatbox_r2_ref
MASKINDEXBOX = maskindexbox_r0_ref maskindexbox_r1_ref
SELREGION    = selregion_c0_ref selregion_c2_ref selregion_c1_ref selregion_r0_ref selregion_r1_ref selregion_r2_ref selregion_u0_ref selregion_u1_ref selregion_u2_ref
SELLONLATBOX = sellonlatbox_c0_ref sellonlatbox_c1_ref sellonlatbox_c2_ref sellonlatbox_r0_ref sellonlatbox_r1_ref sellonlatbox_r2_ref sellonlatbox_u0_ref sellonlatbox_u1_ref sellonlatbox_u2_ref
SELINDEXBOX  = selindexbox_c0_ref selindexbox_c1_ref selindexbox_r0_ref selindexbox_r1_ref
ETCCDI       = etccdi_tx10p_ref etccdi_tx90p_ref etccdi_min_ref etccdi_max_ref
MATH         = math_abs_ref   math_asin_ref  math_cos_ref   math_int_ref   math_log10_ref math_not_ref   math_sin_ref   math_sqrt_ref \
               math_acos_ref  math_atan_ref  math_exp_ref   math_ln_ref    math_nint_ref  math_reci_ref  math_sqr_ref   math_tan_ref
PERCENTILE   = percentile_0_nrank_ref   percentile_20_nrank_ref  percentile_50_nrank_ref  percentile_80_nrank_ref \
               percentile_100_nrank_ref percentile_25_nrank_ref  percentile_66_nrank_ref  percentile_99_nrank_ref \
               percentile_1_nrank_ref   percentile_33_nrank_ref  percentile_75_nrank_ref
PERCENTILE  += percentile_0_nist_ref   percentile_20_nist_ref  percentile_50_nist_ref  percentile_80_nist_ref \
               percentile_100_nist_ref percentile_25_nist_ref  percentile_66_nist_ref  percentile_99_nist_ref \
               percentile_1_nist_ref   percentile_33_nist_ref  percentile_75_nist_ref
PERCENTILE  += percentile_0_linear_ref   percentile_20_linear_ref  percentile_50_linear_ref  percentile_80_linear_ref \
               percentile_100_linear_ref percentile_25_linear_ref  percentile_66_linear_ref  percentile_99_linear_ref \
               percentile_1_linear_ref   percentile_33_linear_ref  percentile_75_linear_ref
PERCENTILE  += percentile_0_weibull_ref   percentile_20_weibull_ref  percentile_50_weibull_ref  percentile_80_weibull_ref \
               percentile_100_weibull_ref percentile_25_weibull_ref  percentile_66_weibull_ref  percentile_99_weibull_ref \
               percentile_1_weibull_ref   percentile_33_weibull_ref  percentile_75_weibull_ref
PERCENTILE  += percentile_0_inverted_cdf_ref   percentile_20_inverted_cdf_ref  percentile_50_inverted_cdf_ref  percentile_80_inverted_cdf_ref \
               percentile_100_inverted_cdf_ref percentile_25_inverted_cdf_ref  percentile_66_inverted_cdf_ref  percentile_99_inverted_cdf_ref \
               percentile_1_inverted_cdf_ref   percentile_33_inverted_cdf_ref  percentile_75_inverted_cdf_ref
PERCENTILE  += percentile_0_interpolated_inverted_cdf_ref   percentile_25_interpolated_inverted_cdf_ref  percentile_75_interpolated_inverted_cdf_ref \
               percentile_100_interpolated_inverted_cdf_ref percentile_33_interpolated_inverted_cdf_ref  percentile_80_interpolated_inverted_cdf_ref \
               percentile_1_interpolated_inverted_cdf_ref   percentile_50_interpolated_inverted_cdf_ref  percentile_99_interpolated_inverted_cdf_ref \
               percentile_20_interpolated_inverted_cdf_ref  percentile_66_interpolated_inverted_cdf_ref
PERCENTILE  += percentile_0_averaged_inverted_cdf_ref   percentile_25_averaged_inverted_cdf_ref  percentile_75_averaged_inverted_cdf_ref \
               percentile_100_averaged_inverted_cdf_ref percentile_33_averaged_inverted_cdf_ref  percentile_80_averaged_inverted_cdf_ref \
               percentile_1_averaged_inverted_cdf_ref   percentile_50_averaged_inverted_cdf_ref  percentile_99_averaged_inverted_cdf_ref \
               percentile_20_averaged_inverted_cdf_ref  percentile_66_averaged_inverted_cdf_ref
PERCENTILE  += percentile_0_normal_unbiased_ref   percentile_20_normal_unbiased_ref  percentile_50_normal_unbiased_ref  percentile_80_normal_unbiased_ref \
               percentile_100_normal_unbiased_ref percentile_25_normal_unbiased_ref  percentile_66_normal_unbiased_ref  percentile_99_normal_unbiased_ref \
               percentile_1_normal_unbiased_ref   percentile_33_normal_unbiased_ref  percentile_75_normal_unbiased_ref
PERCENTILE  += percentile_0_closest_observation_ref   percentile_25_closest_observation_ref  percentile_75_closest_observation_ref \
               percentile_100_closest_observation_ref percentile_33_closest_observation_ref  percentile_80_closest_observation_ref \
               percentile_1_closest_observation_ref   percentile_50_closest_observation_ref  percentile_99_closest_observation_ref \
               percentile_20_closest_observation_ref  percentile_66_closest_observation_ref
PERCENTILE  += percentile_0_lower_ref   percentile_20_lower_ref  percentile_50_lower_ref  percentile_80_lower_ref \
               percentile_100_lower_ref percentile_25_lower_ref  percentile_66_lower_ref  percentile_99_lower_ref \
               percentile_1_lower_ref   percentile_33_lower_ref  percentile_75_lower_ref
PERCENTILE  += percentile_0_hazen_ref   percentile_20_hazen_ref  percentile_50_hazen_ref  percentile_80_hazen_ref \
               percentile_100_hazen_ref percentile_25_hazen_ref  percentile_66_hazen_ref  percentile_99_hazen_ref \
               percentile_1_hazen_ref   percentile_33_hazen_ref  percentile_75_hazen_ref
PERCENTILE  += percentile_0_median_unbiased_ref   percentile_20_median_unbiased_ref  percentile_50_median_unbiased_ref  percentile_80_median_unbiased_ref \
               percentile_100_median_unbiased_ref percentile_25_median_unbiased_ref  percentile_66_median_unbiased_ref  percentile_99_median_unbiased_ref \
               percentile_1_median_unbiased_ref   percentile_33_median_unbiased_ref  percentile_75_median_unbiased_ref
PERCENTILE  += percentile_0_rtype8_ref   percentile_20_rtype8_ref  percentile_50_rtype8_ref  percentile_80_rtype8_ref \
               percentile_100_rtype8_ref percentile_25_rtype8_ref  percentile_66_rtype8_ref  percentile_99_rtype8_ref \
               percentile_1_rtype8_ref   percentile_33_rtype8_ref  percentile_75_rtype8_ref
PERCENTILE  += percentile_0_higher_ref   percentile_20_higher_ref  percentile_50_higher_ref  percentile_80_higher_ref \
               percentile_100_higher_ref percentile_25_higher_ref  percentile_66_higher_ref  percentile_99_higher_ref \
               percentile_1_higher_ref   percentile_33_higher_ref  percentile_75_higher_ref
PERCENTILE  += percentile_0_midpoint_ref   percentile_20_midpoint_ref  percentile_50_midpoint_ref  percentile_80_midpoint_ref \
               percentile_100_midpoint_ref percentile_25_midpoint_ref  percentile_66_midpoint_ref  percentile_99_midpoint_ref \
               percentile_1_midpoint_ref   percentile_33_midpoint_ref  percentile_75_midpoint_ref
PERCENTILE  += percentile_0_nearest_ref   percentile_20_nearest_ref  percentile_50_nearest_ref  percentile_80_nearest_ref \
               percentile_100_nearest_ref percentile_25_nearest_ref  percentile_66_nearest_ref  percentile_99_nearest_ref \
               percentile_1_nearest_ref   percentile_33_nearest_ref  percentile_75_nearest_ref

EXTRA_DIST = $(INPUTDATA) $(FILE) $(GRIB) $(NETCDF) $(ADISIT) $(EOF) $(COMP) $(YDRUNSTAT) $(YDAYSTAT) $(YDAYSTATM) $(YMONSTAT) $(YMONSTATM) $(YSEASSTAT) $(YSEASSTATM) $(SEASSTAT) $(SEASSTATM) $(TIMPCTL) $(TIMSELPCTL) \
             $(RUNSTAT) $(RUNSTATM) $(RUNPCTL) $(TIMSTAT2) $(YEARMONSTAT) $(VERTSTAT) $(VARSSTAT) $(FLDSTAT2) $(FLDSTAT) $(FLDPSTAT) \
             $(ISOSURFACE) $(ECA) $(ETCCDI) $(MATH) \
             $(MASKREGION) $(MASKLONLATBOX) $(MASKINDEXBOX) $(SELREGION) $(SELLONLATBOX) $(SELINDEXBOX) \
             $(TIMSTAT) $(YEARSTAT) $(MONSTAT) $(DAYSTAT) $(TIMSTATM) $(YEARSTATM) $(MONSTATM) $(DAYSTATM) \
             $(MERSTAT) $(ZONSTAT) $(ENSSTAT) $(ENSSTATM) $(ENSPCTL) $(SPECTRAL) $(WIND) $(INTTIME) $(VERTINT) $(REMAPHEALPIX) $(REMAPGRID) $(REMAPSTAT) $(REMAP) $(REMAP2) $(REMAP3) $(REMAP4) $(SELECT) $(DETREND) \
             $(THREAD) $(EXPR) $(GRADSDES) $(ARITH) $(DAYARITH) $(MONARITH) $(YEARARITH) $(YDAYARITH) $(YMONARITH) $(MAPREDUCE) $(MERGETIME) $(REMAPETA) $(SMOOTH) $(SETMISS) $(FILTER) $(PERCENTILE)
