## Process this file with automake to produce Makefile.in
#
noinst_LTLIBRARIES = libhealpix.la
libhealpix_la_SOURCES =                 \
                     an-bool.h          \
                     bl-nl.h            \
                     bl-nl.inc          \
                     bl-nl.ph           \
                     bl.c               \
                     bl.h               \
                     bl.inc             \
                     bl.ph              \
                     healpix-utils.c    \
                     healpix-utils.h    \
                     healpix.c          \
                     healpix.h          \
                     keywords.h         \
                     mathutil.c         \
                     mathutil.h         \
                     mathutil.inc       \
                     os-features.h      \
                     permutedsort.c     \
                     permutedsort.h     \
                     qsort_reentrant.c  \
                     starutil.c         \
                     starutil.h         \
                     starutil.inc       \
                     interpolation.c    \
                     interpolation.h    \
                     stdint_msc.h
#
EXTRA_DIST = bl-nl.c
