## Process this file with automake to produce Makefile.in
#
noinst_LTLIBRARIES = libyac.la
libyac_la_SOURCES =                 \
               area.c               \
               area.h               \
               bnd_circle.c         \
               check_overlap.c      \
               clipping.c           \
               clipping.h           \
               ensure_array_size.c  \
               ensure_array_size.h  \
               geometry.h           \
               grid.h               \
               grid_cell.c          \
               grid_cell.h          \
               intersection.c       \
               interval_tree.c      \
               interval_tree.h      \
               sphere_part.c        \
               sphere_part.h        \
               utils.c              \
               utils.h              \
               yac_ld_interface.h   \
               yac_version.h
#
CPPFLAGS += -DYAC_FOR_CDO
